# poe2-pricecheck-linux

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
packaging/: build_appimage.sh  entry.py  install.sh
poe2price/: __init__.py  __main__.py  clipboard.py  config.py  gamewatch.py  links.py  logsetup.py  modview.py  parser.py  singleton.py  stats.py  status.py  theme.py  trade.py  ui.py
tests/: conftest.py  test_clipboard.py  test_config.py  test_gamewatch.py  test_links.py  test_logsetup.py  test_modview.py  test_parser.py  test_singleton.py  test_stats.py  test_status.py  test_theme.py  test_trade.py  test_ui.py
tests/fixtures/: api_data_stats.json  api_fetch_currency_divine.json  api_fetch_unique_astramentis.json  api_search_unique_astramentis.json  jewel_magic.txt  sceptre_magic.txt
tools/: render_popup.py
